--- a/example/index.html
+++ b/example/index.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>D3.chart Boilerplate Example</title>
+		<title>d3.chart.radar</title>
 
     <meta name="description" content="">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="cleartype" content="on">
-    
+
 		<script src="lib/d3.v3.js"></script>
     <script src="lib/d3.chart.js"></script>
     <script src="lib/modernizr.min.js"></script>
